--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "build": "vuepress build src"
   },
   "license": "MIT",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "husky": "^4.3.0",
     "vuepress": "^1.7.1"
   }
 }
